fix misalignment in activity widget from repor

--- a/workspace/src/app/views/taskViews/transform/editorTabsComponents/tabs.scss
+++ b/workspace/src/app/views/taskViews/transform/editorTabsComponents/tabs.scss
@@ -6,3 +6,7 @@
         top: 0;
     }
 }
+
+div.silk-report-card {
+    margin-left: 0.2rem !important;
+}
